[gd_scene load_steps=2 format=3 uid="uid://csvwe3un73egg"]

[ext_resource type="Script" uid="uid://buihsa10823au" path="res://assets/actor/bars/bars.gd" id="1_lacsi"]

[node name="Bars" type="Node2D"]
script = ExtResource("1_lacsi")

[node name="HPBarBackground" type="ColorRect" parent="."]
z_index = 2
offset_left = -21.0
offset_right = 21.0
offset_bottom = 8.0
size_flags_horizontal = 4
size_flags_vertical = 0
color = Color(0, 0, 0, 1)

[node name="HPBarHealth" type="ColorRect" parent="."]
z_index = 2
offset_left = -20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 7.0
color = Color(1, 0, 0, 1)

[node name="ExpBar" type="ColorRect" parent="."]
z_index = 3
offset_left = -20.0
offset_top = 4.0
offset_right = -20.0
offset_bottom = 7.0
color = Color(0.631238, 0.343144, 1, 1)
